fix(row): fixes row overflow on small widths

--- a/src/styles/templateBuilder.less
+++ b/src/styles/templateBuilder.less
@@ -551,6 +551,11 @@
   .row {
     border-top: 1px solid #dbdbdb;
     flex-grow: 1;
+    display: flex;
+  }
+
+  .cell {
+    overflow: hidden;
   }
 
   .label {
